--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <img src="kabbo812.jpg" alt="" width="">
+    <h1>MY name is kabbo and i'm a front-end developer with 3+ years expreince</h1>
 </body>
 </html>
